Smoke-test latest supported Play version and configure it for JDK16